Modulo de Manipulação da entidade PROVINCIA, devidamente documentado git commit -m
